--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
   "bugs": {
     "url": "https://github.com/magic/example-fancy/issues"
   },
+  "dependencies": {
+    "@magic-modules/accordion": "github:magic-modules/accordion",
+    "@magic-modules/hero": "github:magic-modules/hero"
+  },
   "devDependencies": {
-    "@magic-modules/hero": "github:magic-modules/hero",
     "@magic/core": "github:magic/core",
-    "@magic/test": "0.1.9"
+    "@magic/test": "0.1.10"
   },
   "keywords": [
     "magic",
