--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "url": "https://github.com/magic/example-fancy/issues"
   },
   "dependencies": {
-    "@magic-modules/accordion": "github:magic-modules/accordion",
-    "@magic-modules/hero": "github:magic-modules/hero"
+    "@magic-modules/accordion": "0.0.2",
+    "@magic-modules/gdpr": "0.0.6",
+    "@magic-modules/hero": "0.0.2",
+    "@magic/core": "0.0.3"
   },
   "devDependencies": {
-    "@magic/core": "github:magic/core",
-    "@magic/test": "0.1.21"
+    "@magic/test": "0.1.23"
   },
   "keywords": [
     "magic",
