--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 
 node_js:
-  - "12"
+  - "13.5.0"
+
+cache: npm
 
 os:
   - linux
@@ -9,7 +11,7 @@ os:
 
 env:
   matrix:
-    - NODE_VERSION="12"
+    - NODE_VERSION="13"
 
 matrix:
   fast_finish: true
