--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "url": "https://github.com/magic/example-fancy/issues"
   },
   "dependencies": {
-    "@magic-modules/accordion": "0.0.2",
-    "@magic-modules/gdpr": "0.0.14",
+    "@magic-modules/accordion": "0.0.3",
+    "@magic-modules/gdpr": "0.0.15",
     "@magic-modules/hero": "0.0.2",
-    "@magic/core": "0.0.30"
+    "@magic/core": "0.0.61"
   },
   "devDependencies": {
-    "@magic/test": "0.1.35"
+    "@magic/format": "0.0.7",
+    "@magic/test": "0.1.39"
   },
   "keywords": [
     "magic",
